--- a/Megan.css
+++ b/Megan.css
@@ -1,3 +1,7 @@
+*{
+  padding: 0;
+  
+}
 body {
   display: flex;
   flex-direction: column;
@@ -9,7 +13,9 @@ body {
   background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
   cursor: url="" default;
 }
-
+main{
+  width: 100%;
+}
 #envelope {
   position: relative;
   height: 380px;
@@ -109,10 +115,12 @@ body {
   z-index: 5;
 }
 
+
 .open .letter {
   transform: translatey(-120px);
   transition: transform 0.4s 0.6s ease, z-index 0.6s;
   z-index: 2;
+
 }
 
 .close .letter {
@@ -120,6 +128,40 @@ body {
   transition: transform 0.4s ease, z-index 1s;
   z-index: 1;
 }
+
+
+.open .pocket {
+  transform: translatey(100px);
+  transition: transform 0.4s 0.6s ease, z-index 0.6s;
+  z-index: 7;
+}
+
+.close .pocket {
+  transform: translatey(0deg);
+  transition: transform 0.4s ease, z-index 1s;
+  z-index: 2;
+}
+
+.open .envelope {
+  transform: translatey(100px);
+  transition: transform 0.4s 0.6s ease, z-index 0.6s;
+  z-index: 7;
+}
+
+.close .envelope {
+  transform: translatey(0deg);
+  transition: transform 0.4s ease, z-index 1s;
+  z-index: 2;
+}
+
+
+
+
+
+
+
+
+
 
 .hearts {
   position: absolute;
@@ -349,4 +391,3 @@ body {
       opacity: 0;
     }
   }
-  
