--- a/Megan.css
+++ b/Megan.css
@@ -3,7 +3,7 @@
   
 }
 body {
-  display: flex;
+  display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -157,7 +157,14 @@ main{
 
 
 
-
+.heartb {
+  position: absolute;
+  color: red;
+  font-size: 24px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out, transform 1s ease-in-out;
+  z-index: 1000;
+}
 
 
 
